--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,50 @@
   width: "100%";
   height: "100%";
 }
+
+.link {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+}
+
+.link nav {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.link button {
+  position: relative;
+  font-size: 0.85rem;
+  border-width: 0;
+  background-color: transparent;
+}
+
+.link button:hover:after {
+  transform: scaleX(1) translateX(-50%);
+  transform-origin: left center;
+}
+
+.link button:hover,
+.link button:focus {
+  outline: none;
+}
+
+.link button:after {
+  transform: scaleX(0) translateX(-50%);
+  transform-origin: right center;
+}
+
+.link button:after {
+  background: currentColor;
+  bottom: 0;
+  content: "";
+  height: 1px;
+  left: 50%;
+  position: absolute;
+  transition: transform 0.4s ease;
+  margin: auto;
+  width: 80%;
+}
